# Random-Plex-Movie

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  randomPlexMovie.py
.github/workflows/: docker-publish.yml
config/: config.ini
tests/: test_app.py
web/: index.html
web/js/: script.js
web/style/: style.css
