[project]
name = "random-plex-movie"
version = "2.1.0"
description = "Pick and play a random unwatched Plex movie"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "plexapi>=4.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["randomPlexMovie"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
